# lean-forge

./: README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/forge/: SKILL.md
src/lean_forge/: cli.py
src/lean_forge/prompts/: analyze.md  loop.md  metric.md  protocol.md
